function for event search

--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
       <div class="container">
           <h1 class= "heading">Local Events</h1>
           <form>
-              <select class="input" id="format">
-                  <option value="">Select Events</option>
-                  <option value="concerts">Concerts</option>
-                  <option value="food-drinks">Food & Drink</option>
-                  <option value="film-media-entertainment">Film, Media & Entertainment</option>
-                  <option value="performing-visual">Performing & Visual</option>
-                  <option value="travel-outdoor">Travel & Outdoor</option>
-                  <option value="family-education">Family & Education</option>
-                  <option value="charity-causes">Charity & Causes</option>
-                  <option value= "sports-and-fitness">Sports & Fitness</option>
-              </select>
+              <select class="input" id="format"></select>
               <div class="form-group">
                 <input type="street" 
                        class="form-control" 
@@ -55,8 +45,9 @@
           </form>
       </div>
   <body>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script> 
 	<script src="./assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script> 
+    
   </body>
 </html>
