event details display function

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
               </div>
               
               <button class="submit" id="submit" type="submit">Search</button>
+
+              <div class="category-group">
+                <label id="category">Event Details</label>
+                <select class="event-details" id="details"></select>
+
+              </div>
           </form>
       </div>
   <body>
