created renderCity function to print city to location input container

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Eventbrite Locator Tool</title>
+    <title>Event Locator Tool</title>
   </head>
     <body class="home">
       <div class="container">
           <h1 class= "heading">Find Events Near You</h1>
           <form>
-              <label>ZipCode</label>
+              <label>City</label>
               <input id="location" placeholder="Location"></input><br>
               <button class="submit" id="submit" type="submit">Search</button>
 
