--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
               <button class="submit" id="submit" type="submit">Search</button>
 
               <div class="category-group">
-                <label id="category">Event Details</label>
-                <select class="event-details" id="details"></select>
-
+                  <h2 class="subtitle">Events happening near you. <span id="subtitle"></span></h2>
+                  <!-- display events -->
+                  <div id="event-container" class="list-events"></div>
+                </div>
+              </div>
               </div>
           </form>
       </div>
